oxiplate-derive/tests/crates/unreachable/tests/broken/adding-item-to-match-after-ended.stderr
error: Internal Oxiplate error: Attempted to add item to ended `match` statement.
 --> tests/broken/adding-item-to-match-after-ended.rs:4:62
  |
4 | #[oxiplate_inline(r#"{% match 19 %}{% case _ %}{% endmatch %}{{ "b" }}"#)]
  |                                                              ^^^^^^^^^
  |
  = help: Please open an issue: https://github.com/0b10011/oxiplate/issues/new?title=Attempted+to+add+item+to+ended+match+statement
  = help: Include template that caused the issue and the associated note.

error: proc-macro derive panicked
 --> tests/broken/adding-item-to-match-after-ended.rs:3:10
  |
3 | #[derive(Oxiplate)]
  |          ^^^^^^^^
  |
  = help: message: internal error: entered unreachable code: Internal Oxiplate error. See previous error for more information.

error[E0277]: `Data` doesn't implement `std::fmt::Display`
 --> tests/broken/adding-item-to-match-after-ended.rs:8:18
  |
8 |     print!("{}", Data);
  |             --   ^^^^ `Data` cannot be formatted with the default formatter
  |             |
  |             required by this formatting parameter
  |
  = help: the trait `std::fmt::Display` is not implemented for `Data`
  = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
  = note: this error originates in the macro `$crate::format_args` which comes from the expansion of the macro `print` (in Nightly builds, run with -Z macro-backtrace for more info)
